Fix second assignment

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 /* Add CSS Styling */
 
-.odd-number {
+.odd-numbers {
     background-color: #ffc0eb;
     font-family: Verdana;
     font-family: DejaVu Sans;
