--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,16 @@
 /* Add CSS Styling */
+
+.first,
+.second {
+    font-size: 28px;
+    font-family: Helvetica, 'Times New Roman', sans-serif
+}
+
+.first {
+    background-color: #000000;
+    color: #f0f0f0
+    }
+
+.second {
+    background-color: yellow;
+}
