--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,42 @@
+
 body {
   background: #eee;
   font-family: sans-serif;
+
 }
 
 .card {
+  box-sizing: content-box;
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding: 10px;
+
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin-bottom: 8px;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 10px;
+  margin-bottom: 8px;
+
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 0px auto;
+  padding: 8px 12px;
 }
