--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -12,6 +15,10 @@
 }
 
 ul {
+   display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 10px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
